syntax = "proto3";
package CoreumFoundation.coreum.freeze;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "freeze/params.proto";
import "cosmos/base/v1beta1/coin.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/CoreumFoundation/coreum/x/freeze/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/CoreumFoundation/coreum/freeze/params";
  }
  // Queries a list of FrozenCoins items.
	rpc FrozenCoins(QueryFrozenCoinsRequest) returns (QueryFrozenCoinsResponse) {
		option (google.api.http).get = "/CoreumFoundation/coreum/freeze/frozen_coins/{account}";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryFrozenCoinsRequest {
  string account = 1;
}

message QueryFrozenCoinsResponse {
  repeated cosmos.base.v1beta1.Coin coins = 2 [(gogoproto.nullable) = false];
}

// this line is used by starport scaffolding # 3
